--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,14 @@
   </div>
 </div>
 <div class="row justify-content-start">
-    <div class="col col-1"><a routerLink="/addTask">Add Task</a></div>
-    <div class="col col-1"><a routerLink="/viewTask">View Task</a></div>
+    
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="col col-1"><a class ="navbar-brand" routerLink="/addTask">Add Task</a></div>
+  
+</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="col col-1"><a class ="navbar-brand" routerLink="/viewTask">View Task</a></div>
+    </nav>
 </div>
 <br>
 <br>
