--- a/src/app/addtask/addtask.component.html
+++ b/src/app/addtask/addtask.component.html
@@ -1,4 +1,4 @@
-<form class="form-control" [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
   
 <div id="addSection">
   <div class="row justify-content-start">
@@ -16,7 +16,7 @@
       <label for="formControlRange">Priority:</label>
     </div>
     <div class="col col-5">
-      <span class="input-group-text" id="basic-addon1">0<input type="range" max="30" min="0" class="form-control-range" id="formControlRange" step="1" value="15" formControlName="priority" >30</span>
+      <span class="input-group-text" id="basic-addon1">0<input type="range" max="30" min="0" class="form-control-range" id="formControlRange" step="1" formControlName="priority" >30</span>
     </div>
   </div>
   <br>
