--- a/src/app/updatetask/updatetask.component.html
+++ b/src/app/updatetask/updatetask.component.html
@@ -1,4 +1,4 @@
-<form class="form-control" [formGroup]="updateTaskForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="updateTaskForm" (ngSubmit)="onSubmit()" >
 
 <div id="updateSection">
     <div class="row justify-content-start">
@@ -16,7 +16,7 @@
         <label for="formControlRange">Priority:</label>
       </div>
       <div class="col col-5">
-        <span class="input-group-text" id="basic-addon1">0<input type="range" aria-valuemax="30" aria-valuemin="0" class="form-control-range" id="priority" step="5"  formControlName="priority">30</span>
+        <span class="input-group-text" id="basic-addon1">0<input type="range"  max="30" min="0" class="form-control-range" id="priority" step="1"  formControlName="priority">30</span>
       </div>
     </div>
     <br>
